--- a/.github/workflows/ghcr-amd.yml
+++ b/.github/workflows/ghcr-amd.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: wilco/neko
+  IMAGE_NAME: trywilco/neko
   TAG_PREFIX: ""
   BASE_DOCKERFILE: Dockerfile
   PLATFORMS: linux/amd64
